Added logic to only compare matchups between the fastest driver vs everyone else and all team matchups

--- a/Analytics/analytics.ipynb
+++ b/Analytics/analytics.ipynb
@@ -18,9 +18,9 @@
    "outputs": [],
    "source": [
     "f1.set_log_level(\"Warning\")\n",
-    "session = f1.get_session(2023, 'Mexico', 'Q')\n",
+    "q_session = f1.get_session(2023, 'Mexico', 'Q')\n",
     "\n",
-    "session.load()"
+    "q_session.load()"
    ]
   },
   {
@@ -38,17 +38,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matchups = []\n",
-    "drivers = session.laps['Driver'].unique()\n",
+    "fastest_matchups = []\n",
+    "team_matchcups = []\n",
+    "laps = q_session.laps.pick_accurate().pick_not_deleted()\n",
+    "fastest_driver = laps.pick_fastest()['Driver']\n",
+    "drivers = laps['Driver'].unique()\n",
+    "teams = laps['Team'].unique()\n",
     "\n",
+    "for driver in drivers:\n",
+    "    if driver != fastest_driver:\n",
+    "        fastest_matchups.append([fastest_driver, driver])\n",
     "\n",
-    "for i in range(len(drivers)):\n",
-    "    for j in range(len(drivers) - (i + 2)):\n",
-    "        matchups.append([drivers[i], drivers[i+j+1]])\n",
-    "\n",
-    "#This creates telemetry graph for all matchups that exist\n",
-    "#for matchup in matchups:\n",
-    "#    f1grapher.telemetry_graph(session, matchup)"
+    "for team in teams:\n",
+    "    curr_matchup = laps.pick_team(team)['Driver'].unique()\n",
+    "    if len(curr_matchup) > 1:\n",
+    "        team_matchcups.append(curr_matchup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for matchup in fastest_matchups:\n",
+    "    f1grapher.telemetry_graph(q_session, matchup)"
    ]
   },
   {
