Created Races class that holds all session objects

--- a/Analytics/analytics.ipynb
+++ b/Analytics/analytics.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import fastf1 as f1\n",
     "\n",
-    "from F1Helper import Grapher"
+    "from F1Helper import Grapher, Races"
    ]
   },
   {
@@ -29,7 +29,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1grapher = Grapher()"
+    "f1grapher = Grapher()\n",
+    "f1races = Races()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1races.get_round_sessions()"
    ]
   },
   {
@@ -61,8 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for matchup in fastest_matchups:\n",
-    "    f1grapher.telemetry_graph(q_session, matchup)"
+    "#for matchup in fastest_matchups:\n",
+    "#    f1grapher.telemetry_graph(q_session, matchup)"
    ]
   },
   {
